Fixed rules handling in js code.  Fixed srmap to use groupId etc now. Still need to fix all param handling on event, entity, entity_status, and srmaps.  First version of postresql listen, dblistener class.